manifests/deployment.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "kubeclus"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "kubeclus"
    spec:
      containers:
        - name: "kubeclus"
          image: "afrozregistry.azurecr.io/kubeclus"
          ports:
          - containerPort: 80
